--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
       "use": "@vercel/static-build",
       "config": {
         "installCommand": "npm --prefix frontend install",
-        "buildCommand": "cd frontend && npm run build",
+        "buildCommand": "npm ci && npm run build",
         "distDir": "frontend/build"  
       }
     }
