--- a/vercel.json
+++ b/vercel.json
@@ -3,29 +3,27 @@
   "builds": [
     {
       "src": "backend/server.js",
-      "use": "@vercel/node",
-      "config": {
-        "installCommand": "npm --prefix backend install"
-      }
+      "use": "@vercel/node"
     },
     {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "installCommand": "cd frontend && npm install",
-        "buildCommand": "cd frontend && chmod +x node_modules/.bin/react-scripts && npm run build",
-        "distDir": "frontend/build"
+        "distDir": "build"
       }
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "backend/server.js"
+      "dest": "/backend/server.js"
+    },
+    {
+      "handle": "filesystem"
     },
     {
       "src": "/(.*)",
-      "dest": "/frontend/build/$1"
+      "dest": "/frontend/index.html"
     }
   ]
 }
